<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthWatch</string>
    <string name="title_weight_list">Weight</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_title_weight_new">New weight</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_introduction_text">HealthWatch keeps track of your health and body
        measurements. Your data will be stored on the HealthGraph, which is also used by the famous
        RunKeeper app.\n\nYou are the sole owner of your data. You can access your data anytime
        directly through RunKeeper, even if you decide to uninstall
        this app.\n\nIn order to read and write to the HealthGraph you must authorize this app with
        your RunKeeper account. You can either login if you already have an account or sign up
        (it\'s free).\n\nYou must then authorize this app with your account and will be
        redirected back to this screen.
    </string>
    <string name="welcome_button_authorize_app">Authorize \u2192</string>
    <string name="title_activity_auth_callback">Auth Callback</string>
    <string name="auth_callback_authorizing">Authorizing…</string>
    <string name="auth_callback_auth_error">Error during authorization: %s</string>
    <string name="auth_callback_authorized">Successfully authorized</string>
    <string name="auth_was_reset">Authorization reset, restarting app…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_entry_title">Enter weight data</string>
    <string name="weight_entry_weight">Weight (kg)</string>
    <string name="weight_entry_fat_percent">Body Fat (%)</string>
    <string name="weight_entry_submit">Submit</string>
    <string name="weight_entry_submit_success">Successfully submitted</string>
    <string name="weight_entry_submit_failure">Failed to submit</string>
    <string name="weight_list_fetch_failure">Could not fetch weight list</string>
    <string name="menu_title_reload">Reload</string>
    <string name="item_delete">Delete</string>
    <string name="weight_delete_success">Successfully deleted</string>
    <string name="weight_delete_failure">Failed to delete</string>

</resources>
